talos/kubernetes/applications/nginx/overlays/dev/ingress-dev.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.rubberduckops.com`)
      kind: Rule
      services:
        - name: web-service
          port: 80
          scheme: http
  tls:
    secretName: nginx-tls
